@@ -1,3 +1,8 @@
+2005-10-10  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/23437
+	* g++.dg/template/arg4.C: New test.
+
 2005-10-10  Eric Botcazou  <ebotcazou@libertysurf.fr>
 
 	* gcc.dg/ucnid-2.c: XFAIL on Solaris.
