@@ -1,3 +1,10 @@
+2005-10-10  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+	    Mark Mitchell  <mark@codesourcery.com>
+
+        PR c++/23437
+	* parser.c (cp_parser_template_argument_list): Do not treat
+	contents of argument list as part of a constant expression.
+
 2005-10-10  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/24139
